<resources>
    <string name="app_name">Polishop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_produto">Produto</string>
    <string name="menu_drawer_home">Home</string>
    <string name="menu_drawer_pedidos">Meus pedidos</string>
    <string name="menu_drawer_carrinho">Carrinho</string>
    <string name="menu_drawer_favoritos">Favoritos</string>
    <string name="menu_drawer_categoria">Categorias</string>
    <string name="menu_drawer_loja">Mapa da loja</string>
    <string name="menu_drawer_atendimento">Central de atendimento</string>
    <string name="menu_drawer_politica">Política de privacidade</string>
    <string name="menu_drawer_configuracoes">Configurações</string>
    <string name="text_loading">Carregando dados</string>
    <string name="text_faca_login">Faça login</string>
    <string name="text_bottom_loading">Carregando dados do servidor ...</string>
    <string name="text_moeda">R$&#160;</string>
    <string name="text_multiplicador">X</string>
    <string name="text_de">&#160;de&#160;</string>
    <string name="text_desconto">OFF</string>
    <string name="text_search">Pesquise</string>
    <string name="text_busca">Você buscou por</string>
    <string name="text_busca_vazio">-</string>
    <string name="text_result">Resultado</string>
    <string name="text_result_zero">0</string>
</resources>
